2011-04-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-start-logentry): refadvice removed
	(clearcase-finish-checkout-reserved)
	(clearcase-finish-checkout-unreserved): functions removed
	(vc-clearcase-checkout): invoke `log-edit' directly instead via
	`vc-start-entry'
	(clearcase-bind-checkout-comment): new function, added to
	`vc-before-checkin-hook'

2011-03-30  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-root): when called with a nil arg,
	use `default-directory'

2011-03-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-annotate-contributor-to-line):
	update for new return value from
	`vc-annotate-extract-revision-at-line'

2011-02-22  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-get-file-version): new function
	(clearcase-diff-with-diff): use `clearcase-get-file-version'
	instead of `vc-find-file' -- avoids loading the versioned files in
	Emacs

2011-02-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase): add link to documentation page 

	* ucm.el (ucm): add link to documentation page

2011-02-03  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-checkout-model): accept both a
	single file and a file set as an argument
	(clearcase-revision-reserved-p): return non nil if any revision on
	the branch is checked out reserved, not just the current file
	revision.
	(vc-next-action): new defadvice: `clearcase-force-recompute-state'
	(vc-clearcase-checkout-model): change it back to 'locking
	(vc-clearcase-unload-hook): disable vc-next-action advice
	(vc-clearcase-state-heuristic): check for broken views here
	(vc-clearcase-state): just refresh the state and call
	`vc-clearcase-state-heuristic'

2011-02-02  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-checkout-model): use an implicit
	checkout model for unreserved checkouts.

2011-01-29  Alex Harsanyi  <AlexHarsanyi@gmail.com>
